--- a/first/index.css
+++ b/first/index.css
@@ -1,13 +1,13 @@
 body{
-    display: flex;
-    flex-direction:column;
+
+    background-color: rgb(216, 216, 216);
 }
 
 header{
-    height:180px;
-    background-color: rgb(80, 80, 80);
+    height:20vh;
+    background-color: rgb(68, 68, 68);
 }
-
+/*
 main{
     display: flex;
     flex-direction:row;
@@ -18,18 +18,20 @@ main{
     height:900px;
     background-color: rgb(224, 224, 224);
 }
-
+*/
 .middleSection{
-    width:600px;
-    display: flex;
-    flex-direction:column;
+    margin-left: auto;
+    margin-right: auto;
+    width:70%;
+
 }
 
 .middleMain{
-    height:750px;
+    height:70vh;
+    background-color: rgb(239, 239, 239);
 }
 
 footer{
-    height:150px;
-    background-color:black;
+    height:10vh;
+    background-color:rgb(34, 34, 34);
 }
