Third re-done (mostly color clean-up)

--- a/third/index.css
+++ b/third/index.css
@@ -4,25 +4,23 @@
 }
 
 section{
-    overflow: auto;
-    height:14vh;
+    height:30vh;
 }
 
 .graySection{
-    background-color:darkgray;
+    background-color:rgb(216, 216, 216);
+    padding:30px;
 }
 
 .blueBox{
     height:100px;
     width: 100px;
-    background-color:blue;
-    margin-top:10px;
-    margin-bottom:10px;
+    background-color:rgb(90, 144, 220);
     margin-left: 30px;
 }
 
 main{
-    height:20vh;
+    height:21vh;
     font-size: x-large;
     text-align: center;
     font-family: 'Lucida Sans';
@@ -32,17 +30,17 @@ main{
 }
 
 .blueSection{
-    background-color:blue;
+    background-color:rgb(90, 144, 220);
 }
 
 .aquaSection{
-    background-color:aqua;
+    background-color:rgb(124, 224, 195);
 }
 
 .oliveSection{
-    background-color: olive;
+    background-color: rgb(194, 230, 145);
 }
 
 .yellowSection{
-    background-color: yellow;
+    background-color: rgb(246, 230, 82);
 }
