--- a/third/index.css
+++ b/third/index.css
@@ -1,15 +1,16 @@
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 section{
-    height:30vh;
+    height:16vh;
 }
 
 .graySection{
     background-color:rgb(216, 216, 216);
-    padding:30px;
+    padding-top:30px;
 }
 
 .blueBox{
